fix: correct button width on safari

--- a/res/css/views/auth/_AuthBody.scss
+++ b/res/css/views/auth/_AuthBody.scss
@@ -144,7 +144,6 @@ limitations under the License.
 .mx_AuthBody_changeFlow {
     display: block;
     text-align: center;
-    width: 100%;
 
     > a {
         font-weight: $font-semi-bold;
